<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/et_faculty_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/faculty_name" />

    <EditText
        android:id="@+id/et_course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_name" />

    <EditText
        android:id="@+id/et_course_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/course_code" />

</LinearLayout>